--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "@types/mocha": "^9.0.0",
         "@types/node": "^16.9.1",
         "chai": "^4.3.4",
+        "esbuild": "^0.13.2",
         "ethereum-waffle": "^3.4.0",
         "ethers": "^5.4.6",
         "hardhat": "^2.6.4",
