--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "description": "sandbox/playground for dave to toy with crypto tech",
   "scripts": {
     "test:penny": "cd penny && npx hardhat test",
-    "build:penny": "echo \"TODO dave\"",
+    "build:penny": "cd penny && npx hardhat compile",
     "dev:penny:web": "cd penny && npx esbuild src/penny.ts --servedir=public --outdir=public/js --bundle",
     "dev:penny:chain": "cd penny && npx hardhat node",
-    "dev:penny:deploy": "cd penny && npx hardhat script ./scripts/deploy-penny-jar.ts --network localhost"
+    "dev:penny:deploy": "cd penny && npx hardhat run ./scripts/deploy-penny-jar.ts --network localhost"
   },
   "author": "Dave Peck <davepeck@davepeck.org>",
   "license": "MIT",
